--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,8 @@
         <java.version>1.8</java.version>
         <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
         <cucumber.version>2.3.1</cucumber.version>
-        <skipTests>false</skipTests>
-        <skipITs>${skipTests}</skipITs>
-        <skipUTs>${skipTests}</skipUTs>
+        <skipUnitTests>false</skipUnitTests>
+        <!--        <skip.integration.tests>true</skip.integration.tests>-->
     </properties>
 
     <dependencies>
@@ -108,14 +107,15 @@
                 </executions>
             </plugin>
 
+            <!-- This pulls in the code in the src/integration/... folders into the build -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>1.5</version>
+                <version>1.12</version>
                 <executions>
                     <execution>
-                        <id>add-test-source</id>
-                        <phase>process-resources</phase>
+                        <id>add-integration-test-sources</id>
+                        <phase>generate-test-sources</phase>
                         <goals>
                             <goal>add-test-source</goal>
                         </goals>
@@ -125,39 +125,50 @@
                             </sources>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>add-integration-test-resources</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>add-test-resource</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <filtering>true</filtering>
+                                    <directory>src/integration/resources</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
 
+            <!-- Runs all unit tests in Maven 'test' phase; all classes ending in *Test.java -->
+            <!-- using -DskipUnitTests=true skips unit tests for CI pipeline separation -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
-                    <skipTests>${skipUTs}</skipTests>
+                    <skipTests>${skipUnitTests}</skipTests>
                 </configuration>
             </plugin>
+
+            <!-- Run all integration tests ending *IT.java in Maven 'verify' phase -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
-                        <id>run-integration-tests</id>
-                        <phase>integration-test</phase>
                         <goals>
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <skipTests>${skipTests}</skipTests>
-                    <skipITs>${skipITs}</skipITs>
-                </configuration>
             </plugin>
-
-
-        </plugins>
+    </plugins>
     </build>
 
     <reporting>
