--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.source=@java.version@
 info.app.java.target=@java.version@
+server.port = 8081
